--- a/dispatch/docker-compose.yaml
+++ b/dispatch/docker-compose.yaml
@@ -1,30 +1,36 @@
 version: '3'
 services:
+
   rabbitmq:
     image: rabbitmq:3.7-management-alpine
+    container_name: rabbitmq
     ports:
       - "5672"
       - "15672:15672"
     networks:
-      - robot-shop
+      - rs_network
+
   payment:
     build:
       context: ../payment
     image: steveww/rs-payment
+    container_name: payment
     depends_on:
       - rabbitmq
     ports:
       - "8080:8080"
     networks:
-      - robot-shop
+      - rs_network
+
   dispatch:
     build:
       context: .
     image: steveww/rs-dispatch
+    container_name: dispatch
     depends_on:
       - rabbitmq
     networks:
-      - robot-shop
+      - rs_network
 
 networks:
-  robot-shop:
+  rs_network:
